--- a/Editor/src/main/java/cz/fi/muni/vavmar/editor/MainFrame.form
+++ b/Editor/src/main/java/cz/fi/muni/vavmar/editor/MainFrame.form
@@ -3,6 +3,9 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+      <ResourceString bundle="cz/fi/muni/vavmar/editor/Bundle.properties" key="MainFrame.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -45,7 +48,6 @@
             <EtchetBorder/>
           </Border>
         </Property>
-        <Property name="name" type="java.lang.String" value="" noResource="true"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_AddingCodePre" type="java.lang.String" value="mainScenePanel.add(mainScene.getSceneEnvelope());"/>
@@ -130,13 +132,13 @@
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                    <TitledBorder title="&lt;MainFrame.tablesListArea.border.title&gt;">
+                    <TitledBorder title="Dostupne tabulky">
                       <ResourceString PropertyName="titleX" bundle="cz/fi/muni/vavmar/editor/Bundle.properties" key="MainFrame.tablesListArea.border.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
                     </TitledBorder>
                   </Border>
                 </Property>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="Utils.createListModel( dataFetcher.getAllTablesString() )" type="code"/>
+                  <Connection code="Utils.createListModel( dataProvider.getTables(null) )" type="code"/>
                 </Property>
                 <Property name="selectionMode" type="int" value="0"/>
               </Properties>
@@ -162,7 +164,7 @@
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="&lt;MainFrame.toolPanel.border.title&gt;">
+                <TitledBorder title="Nastroje">
                   <ResourceString PropertyName="titleX" bundle="cz/fi/muni/vavmar/editor/Bundle.properties" key="MainFrame.toolPanel.border.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
                 </TitledBorder>
               </Border>
