--- a/src/cz/muni/fi/vavmar/printeditor/MainFrame.form
+++ b/src/cz/muni/fi/vavmar/printeditor/MainFrame.form
@@ -116,7 +116,7 @@
                 <Property name="selectionMode" type="int" value="0"/>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="columnsListArea.setTransferHandler( new cz.fi.muni.vavmar.editor.DnDColumnListHandler(this) );&#xa;columnsListArea.setDragEnabled(true);"/>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="columnsListArea.setTransferHandler( new cz.muni.fi.vavmar.printeditor.DnDColumnListHandler(this) );&#xa;columnsListArea.setDragEnabled(true);"/>
               </AuxValues>
             </Component>
           </SubComponents>
@@ -130,7 +130,7 @@
           <SubComponents>
             <Component class="javax.swing.JList" name="tablesListArea">
               <Properties>
-                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor" postCode="tablesList = mainScene.getDataProvider().getTables(null);">
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                     <TitledBorder title="Dostupne tabulky">
                       <ResourceString PropertyName="titleX" bundle="cz/muni/fi/vavmar/printeditor/Bundle.properties" key="MainFrame.tablesListArea.border.title" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
