--- a/src/cz/muni/fi/vavmar/printeditor/MainFrame.form
+++ b/src/cz/muni/fi/vavmar/printeditor/MainFrame.form
@@ -171,7 +171,7 @@
             </Property>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_LayoutCodePost" type="java.lang.String" value="toolPanel.add (new TextTool(&quot;Text&quot;, &quot;images/textTool.png&quot;));&#xa;toolPanel.add (new ImageTool(&quot;Image&quot;, &quot;images/imageIcon.png&quot;));"/>
+            <AuxValue name="JavaCodeGenerator_LayoutCodePost" type="java.lang.String" value="toolPanel.add (new TextTool(&quot;Text&quot;, &quot;cz/muni/fi/vavmar/printeditor/images/textTool.png&quot;));&#xa;toolPanel.add (new ImageTool(&quot;Image&quot;, &quot;cz/muni/fi/vavmar/printeditor/images/imageIcon.png&quot;));&#xa;toolPanel.add (new SubreportTool(&quot;Subreport&quot;, &quot;cz/muni/fi/vavmar/printeditor/images/subreportTool.png&quot;));"/>
           </AuxValues>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
